@@ -1,5 +1,6 @@
 [Webhost]
 ControlPort=6352
+UseNetworkManager=0
 NetworkInterface1=eth0
 NtpConfigurationFile=/etc/ntp.conf
 NtpServiceName=ntpd
